--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -15,6 +16,10 @@ html {
 body {
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
+}
+
+button {
+  cursor: pointer;
 }
 
 a {
