--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -112,3 +112,44 @@ form button {
 form button:hover {
   background-color: #2fb86e;
 }
+
+.items-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
+}
+
+.items-grid li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  background-color: #f5f5f5;
+
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+
+  height: 180px;
+  padding: 32px 24px 16px;
+  cursor: pointer;
+}
+
+.items-grid li span {
+  display: flex;
+  align-items: center;
+  flex: 1;
+
+  color: var(--title-color)
+}
+
+.items-grid li.selected {
+  background: #e1faec;
+  border: 2px solid #34eb79;
+}
+
+.items-grid li img,
+.items-grid li span {
+  pointer-events: none;
+}
+
