--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -6,37 +6,40 @@
 }
 
 #page-create-point header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
   margin-top: 48px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #page-create-point header a {
-  display: flex;
-  align-items: center;
-  
   color: var(--title-color);
   font-weight: bold;
+
+  display: flex;
+  align-items: center;
 }
 
 #page-create-point header a span {
-  display: flex;
   margin-right: 16px;
-  
-  background-image: url('../assets/arrow-left.svg');
+  background-image: url("../assets/arrow-left.svg");
+
+  display: flex;
 
   width: 20px;
   height: 24px;
 }
 
 form {
-  max-width: 730px;
   background-color: white;
-  padding: 64px;
+
   margin: 80px auto;
+  padding: 64px;
+
   border-radius: 8px;
+
+  max-width: 730px;
 }
 
 form h1 {
@@ -49,17 +52,29 @@ form fieldset {
 }
 
 form legend {
-  margin-bottom: 40px; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  margin-bottom: 40px;
+  width: 100%;
 }
 
 form legend h2 {
   font-size: 24px;
 }
 
+form legend span {
+  font-size: 14px;
+  color: var(--title-color);
+}
+
 form .field {
+  flex: 1;
+
   display: flex;
   flex-direction: column;
-  flex: 1;
+
   margin-bottom: 24px;
 }
 
@@ -67,15 +82,15 @@ form .field-group {
   display: flex;
 }
 
-form input, form select {
+form input,
+form select {
   background-color: #f0f0f5;
+
   border: 0;
   padding: 16px 24px;
   font-size: 16px;
 
   border-radius: 8px;
-
-  outline: none;
 }
 
 form select {
@@ -98,12 +113,14 @@ form button {
   height: 56px;
 
   background-color: var(--primary-color);
-  border: 0;
   border-radius: 8px;
 
   color: white;
   font-weight: bold;
   font-size: 16px;
+
+  border: 0;
+
   margin-top: 40px;
 
   transition: background-color 400ms;
@@ -120,36 +137,43 @@ form button:hover {
 }
 
 .items-grid li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  list-style: none;
   background-color: #f5f5f5;
+  list-style: none;
 
   border: 2px solid #f5f5f5;
   border-radius: 8px;
 
   height: 180px;
+
   padding: 32px 24px 16px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  text-align: center;
+
   cursor: pointer;
 }
 
 .items-grid li span {
-  display: flex;
-  align-items: center;
+  margin-top: 12px;
+
   flex: 1;
 
-  color: var(--title-color)
+  display: flex;
+  align-items: center;
+
+  color: var(--title-color);
 }
 
 .items-grid li.selected {
   background: #e1faec;
-  border: 2px solid #34eb79;
+  border: 2px solid #34cb79;
 }
 
 .items-grid li img,
 .items-grid li span {
   pointer-events: none;
 }
-
