--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -27,16 +27,36 @@
   #page-search-results .cards img {
     height: 250px;
   }
-}
 
-@media (min-width: 1700px) {
-  #page-home {
-    background-position-x: 40vw;
+  #page-create-point .field-group {
+    flex-direction: column; 
+  }
+
+  #page-create-point .field-group .field + .field{
+    margin-left: 0
   }
 }
 
 @media (max-height: 760px) {
   #page-home {
     background-position-y: 200px;
+  }
+}
+
+@media (max-width: 650px) {
+  #page-create-point .items-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 550px) {
+  #page-create-point .items-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 1700px) {
+  #page-home {
+    background-position-x: 40vw;
   }
 }
