--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -82,3 +82,15 @@
   background-color: #2fb85e;
 }
 
+/* Modal Point Created */
+
+#modal.point .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#modal.point h1 {
+  color: white;
+  margin-top: 32px;
+}
