--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,16 @@
+body {
+  background-color: white;
+}
+
 body::after {
   content: '';
-  position: fixed;
-  background: white;
-  top: 260px;
+  position: absolute;
+  background: var(--background-color);
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+  height: 16rem;
   z-index: -1;
 }
 
@@ -28,7 +33,7 @@ body::after {
   display: flex;
   align-items: center;
   
-  color: var(--title-color);
+  color: var(--title-paragraph-color);
   font-weight: bold;
 }
 
