--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -14,37 +14,36 @@
   {% include 'partials/page-header.html' %}
 
   <main>
-    <h4>
-      <strong>2 pontos
-      </strong>encontrados
-    </h4>
 
-    <div class="cards">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=874&q=80" alt="Coletoria">
-        <h1>Coletoria</h1>
-        <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-        <p>
-          Rio do Sul, Santa Catarina
-          <br/>
-          Guilherme Gemballa. Jadmin América
-          <br/>
-          Número 260
-        </p>
+    {% if numberOfPlaces > 0 %}
+      <h4>
+        <strong>{{ numberOfPlaces }} pontos</strong>
+        encontrados
+      </h4>
+
+      <div class="cards">
+        {% for place in places %}
+          <div class="card">
+            <img src="{{ place.image }}" alt="{{ place.name }}" />
+            <h1>{{ place.name }}</h1>
+            <h3>{{ place.items }}</h3>
+            <p>
+              {{ place.city }}, {{ place.state }}
+              <br/>
+              {{ place.address }}
+              <br/>
+              {{ place.address2 }}
+            </p>
+          </div>
+        {% endfor %}
       </div>
 
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Coletoria">
-        <h1>Papersider</h1>
-        <h3>Papéis e papelão</h3>
-        <p>
-          Rio do Sul, Santa Catarina
-          <br/>
-          Guilherme Gemballa. Jadmin América
-          <br/>
-          Número 260
-        </p>
-      </div>
-    </div>
+    {% else %}
+      <h4><strong>Nenhum</strong> local encontrado</h4>
+
+
+    {% endif %}
+    
+    
   </main>
 {% endblock content %}
