--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -9,7 +9,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   transition: 400ms;
 }
 
@@ -93,4 +92,25 @@
 #modal.point h1 {
   color: white;
   margin-top: 32px;
+}
+
+#modal.error .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #c16464;
+  padding: 20px 40px;
+  border-radius: 8px;
+}
+
+#modal.error img {
+  height: 40px;
+  width: 40px;
+}
+
+#modal.error span {
+  color: white;
+  margin-top: 20px;
+  font-weight: bold;
+  text-align: center;
 }
