--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -115,6 +115,10 @@
   {% if saved %}
     {% include "partials/point-created.html" %}
   {% endif %}
+
+  {% if error %}
+    {% include "partials/errors.html" %}
+  {% endif %}
 {% endblock modal %}
 
 
